@@ -1,3 +1,11 @@
+Wed Apr  2 12:13:50 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/DSI_AMI_Gateway/client.cpp:
+
+          Reworded exception handlers to avoid having the nightly build
+          scoreboard detect expected exceptions as errors. This resolves
+          bug 2879.
+
 Wed Apr  2 11:47:45 UTC 2008  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * tests/Collocated_Forwarding/Server_ORBInitializer.h:
